add firebase config to caster

--- a/caster.html
+++ b/caster.html
@@ -40,10 +40,10 @@ import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.23.0
 
 /* 🔧 Firebase 설정 (아직 비워둠) */
 const firebaseConfig = {
-apiKey: "",
-authDomain: "",
-databaseURL: "",
-projectId: ""
+apiKey: "AIzaSyC1E1-vIqTBbe34LSjsbpMGnh4JLwMJycc",
+authDomain: "worlds-draft.firebaseapp.com",
+databaseURL: "https://worlds-draft-default-rtdb.firebaseio.com",
+projectId: "worlds-draft"
 };
 
 const app = initializeApp(firebaseConfig);
