--- a/viewer.html
+++ b/viewer.html
@@ -82,10 +82,10 @@ import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.
 
 /* 🔧 Firebase 설정 (아직 비워둠) */
 const firebaseConfig = {
-apiKey: "",
-authDomain: "",
-databaseURL: "",
-projectId: ""
+apiKey: "AIzaSyC1E1-vIqTBbe34LSjsbpMGnh4JLwMJycc",
+authDomain: "worlds-draft.firebaseapp.com",
+databaseURL: "https://worlds-draft-default-rtdb.firebaseio.com",
+projectId: "worlds-draft"
 };
 
 const app=initializeApp(firebaseConfig);
