--- a/caster.html
+++ b/caster.html
@@ -142,6 +142,15 @@ currentPick: index + 1
 });
 });
 }
+
+<h2>선수 선택</h2>
+
+<div id="player-buttons">
+<button onclick="pickPlayer('Faker')">Faker</button>
+<button onclick="pickPlayer('Chovy')">Chovy</button>
+<button onclick="pickPlayer('ShowMaker')">ShowMaker</button>
+<button onclick="pickPlayer('Knight')">Knight</button>
+</div>
 </script>
 </body>
 </html>
